# AgentRail

./: .gitignore  README.md  pom.xml
agentrail-api/: Dockerfile  pom.xml
agentrail-api/src/main/java/com/agentrail/api/: AgentRailApiApplication.java
agentrail-api/src/main/java/com/agentrail/api/config/: SecurityConfig.java
agentrail-api/src/main/java/com/agentrail/api/controller/: AgentController.java  GlobalExceptionHandler.java  TenantController.java  ToolController.java  WorkflowController.java
agentrail-api/src/main/java/com/agentrail/api/dto/: AgentDefinitionDto.java  AgentVersionDto.java  CreateAgentDefinitionRequest.java  CreateAgentVersionRequest.java  CreateTenantRequest.java  (+15 more)
agentrail-api/src/main/resources/: application-dev.yml  application.yml
agentrail-api/src/main/resources/db/migration/: V1__create_core_tables.sql
agentrail-contracts/: README.md
agentrail-contracts/schemas/: agent-version.schema.json  edgespec.schema.json  graphspec.schema.json  nodespec.schema.json  run.schema.json  tool-version.schema.json  workflow-manifest.schema.json
agentrail-service/: Dockerfile  pom.xml
agentrail-service/src/main/java/com/agentrail/service/: AgentRailServiceApplication.java
agentrail-service/src/main/resources/: application-dev.yml  application.yml
agentrail-worker/: Dockerfile  README.md  pyproject.toml
agentrail-worker/src/agentrail_worker/: activities.py  callbacks.py  config.py  db.py  models.py  worker.py  workflows.py
deploy/: .env.example  README.md  docker-compose.yml  e2e-test.sh
deploy/postgres/: init.sql
docs/: design.md
(+43 files in other folders)
