[project]
name = "agentrail-worker"
version = "0.1.0"
description = "AgentRail execution worker – Temporal + LangGraph + Pydantic v2"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "temporalio>=1.7,<2",
    "langgraph>=0.3,<1",
    "pydantic>=2.0,<3",
    "langchain-openai>=0.3,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "boto3>=1.35,<2",
    "uvicorn>=0.34,<1",
]

[project.scripts]
agentrail-worker = "agentrail_worker.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrail_worker"]

[tool.ruff]
target-version = "py312"
line-length = 120
